# pyuubin

./: .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CNAME  Dockerfile  LICENSE  Makefile  README.md  dot-env.file  pylama.ini  pyproject.toml  test_htpasswd
docker/release/: Dockerfile  Dockerfile-latest  install.sh
docs/: index.html  openapi.json
pyuubin/: __main__.py  auth.py  db.py  health.py  mailer.py  settings.py  worker.py
pyuubin/api/: app.py  v1.py
tests/: conftest.py  test_auth.py  test_db.py  test_health.py  test_http_endpoints.py  test_mail_queue.py  test_self_cert.py  test_send_mail_smtp.py  test_sending.py  test_templates.py  test_worker.py
yuubin/: __main__.py  auth.py  certs.py  db.py  exceptions.py  health.py  mailer.py  models.py  settings.py  templates.py  worker.py
yuubin/api/: __main__.py  app.py  v1.py
yuubin/connectors/: smtp.py  stdout.py
