
[tool.black]
line-length=120

[tool.poetry]
name = "yuubin"
version = "19.1"
description = "Mailing services with HTTP Api"
authors = ["Michal Mazurek <michal@mazurek-inc.co.uk>"]
license = "Apache-2.0"
packages = [
    {include = "yuubin"}
]

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^2.10"
aiosmtplib = "^1.0"
sanic-transmute = "^0.1.3"
click = "^7.0"
sanic = "^18.12"
aioredis = "^1.2"
msgpack = "^0.6.1"
html2text = "^2018.1"
trio = "^0.11.0"
envparse = "^0.2.0"
m2crypto = "^0.31.0"
bcrypt = "^3.1"
tblib = "^1.3"
coloredlogs = "^10.0"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.10.0"
pytest-sanic = "^0.1.15"
pytest = "^4.2"
pytest-cov = "^2.6"
asynctest = "^0.12.2"
hypothesis = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

